tdf#142437: Fix word boundary detection in autocorrect

Marks (combining and spacing) were incorrectly considered word separators,
because isLetterNumeric() matches only for letters and numbers.

The new isBase() matches any character with BASE_FORM character class, which covers letters, numbers, and marks.

Change-Id: I27ec2f7fb8d360791a280d10aba9b6d16e7cfb71
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153509
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@libreoffice.org>